# netsnap

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  neighbor_info_example.json  pyproject.toml  setup.py
docs/: SNAPNET_DOCUMENTATION.md  device_info.html  mdb_info.html  neighbor_info.html  route_info.html  rule_info.html
examples/: NETSNAP_EXAMPLE_OUTPUT.md  basic_usage.py  comprehensive_monitoring.py  device_info_example.json  mdb_info_example.json  network_snapshot.json  route_info_example.json  rule_info_example.json
netmon/: device_info.py  mdb_info.py  route_info.py
netsnap/: __init__.py  device_info.py  mdb_info.py  neighbor_info.py  route_info.py  rule_info.py  snapnet.py
tests/: __init__.py  test_package.py
