[build-system]
requires = ["setuptools>=61.0", "wheel", "cffi>=1.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netsnap"
version = "2.1.0"
description = "Comprehensive Linux network json snapshots with python library. Alternative to pyroute2 emphasizing maintainability."
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Harry Coin", email = "hcoin@quietfountain.com"}
]
maintainers = [
    {name = "Harry Coin", email = "hcoin@quietfountain.com"}
]
keywords = [
    "networking",
    "linux",
    "rtnetlink",
    "netlink",
    "monitoring",
    "network-interfaces",
    "routing",
    "arp",
    "ndp",
    "wireguard",
    "bridge",
    "system-administration"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Networking",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "cffi>=1.0.0",
    "setuptools>=61.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/hcoin/netsnap"
Documentation = "https://github.com/hcoin/netsnap#readme"
Repository = "https://github.com/hcoin/netsnap"
"Bug Tracker" = "https://github.com/hcoin/netsnap/issues"

[project.scripts]
netsnap-device = "netsnap.device_info:main"
netsnap-route = "netsnap.route_info:main"
netsnap-neighbor = "netsnap.neighbor_info:main"
netsnap-mdb = "netsnap.mdb_info:main"
netsnap-rule = "netsnap.rule_info:main"
netsnap-snapnet = "netsnap.snapnet:main"

[tool.setuptools]
packages = ["netsnap"]

[tool.setuptools.package-data]
netsnap = ["docs/*.html", "examples/*.json", "LICENSE","*.md",]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=netsnap --cov-report=html --cov-report=term-missing"

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
